# CellLayers

./: .RData  .Rhistory  .gitignore  CellLayers-env.yml  Dockerfile  Dockerfile-tensorflow  LICENSE  README.md  TODO.txt  buildImage.sh  pyproject.toml  readthedocs.yml  runContainer-tensorflow.sh  setup.py
CellLayers/: BuildCoExpressionSankey.py  BuildEnrichmentSankey.py  BuildSankey.py  BuildSankeyNetwork.py  CellLayers.py  CellLayersCompute.py  CellLayersConfig.py  CoExpressionSankey.py  EnrichmentAnalysis.py  EnrichmentSankey.py  MultiResolutionAnalysis.py  Sankey.py  __init__.py
CellLayers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Data/: PBMC_meta.csv  pbmc3k_modularity.csv  pbmc_top_genes.csv
Env/: Dockerfile-datascience  Dockerfile-datascience_v0.2  buildImage.sh  runContainer-CellLayers_v0.2.sh  runContainer-datascience_v0.2.sh  runContainer-tensorflow.sh  runContainer.sh
Images/: example.html
Notebooks/: CellLayers.ipynb  CellLayers_v2.ipynb  PBMC_CellLayers.html  PBMC_Enrichment.ipynb  PBMC_PrepareData.ipynb  PBMC_Setup.ipynb  PBMC_SetupCellLayers.ipynb  PBMC_Tutorial.ipynb  PBMC_tutorial.html  TBX5_SetupCellLayers.ipynb  TBX5_SubsetPublicationData.ipynb  TBX5_Tutorial.ipynb  Tutorial.ipynb  initial_design.ipynb  pbmc3k_seurat_preprocessing.ipynb
SetupCellLayers/: DESCRIPTION  NAMESPACE
Tutorial/: README
docs/: readthedocs-environment.yml
env/: CellLayers-env.yml  Dockerfile  cell-layers.def  install-SetupCellLayers.R
notebooks/: PBMC_SetupCellLayers.ipynb  README.md  TBX5_SetupCellLayers.ipynb  TBX5_SubsetPublicationData.ipynb  (+1 more)
(+73 files in other folders)
